# pdf2csv

./: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
pdf2csv/: __init__.py  cli.py  pdf2csv.py
tests/: __init__.py  test_pdf2csv.py
