[tool]
[tool.poetry]
name = "pdf2csv"
version = "0.1.0"
homepage = "https://github.com/pimeson48/pdf2csv"
description = "Top-level package for pdf2csv."
authors = ["Jon Chuma <jchuma@gmail.com>"]
readme = "README.rst"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "pdf2csv" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"
click = "*"
tabula = "^1.0.5"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
pdf2csv = 'pdf2csv.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
